<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>ru.letoapp</groupId>
  <artifactId>Leto-app-android-tests</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <name>Leto Bank Application Tests</name> 
  <build>
		<pluginManagement>
			<plugins>
				<plugin>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.1</version>
					<configuration>
						<source>1.6</source>
						<target>1.6</target>
						<encoding>UTF-8</encoding>
					</configuration>
				</plugin>
				<plugin>
       				<groupId>org.apache.maven.plugins</groupId>
       				<artifactId>maven-surefire-plugin</artifactId>
       				<version>2.12.2</version>   
       				<configuration>
       				    <systemPropertyVariables>
                            <org.uncommons.reportng.escape-output>false</org.uncommons.reportng.escape-output>
                            <org.uncommons.reportng.title>Test Results</org.uncommons.reportng.title>
                        </systemPropertyVariables>
                        <encoding>UTF-8</encoding>
              			<inputEncoding>UTF-8</inputEncoding>
              			<outputEncoding>UTF-8</outputEncoding>
              			<argLine>-Xms256m -Xmx512m -XX:MaxPermSize=128m -ea -Dfile.encoding=UTF-8</argLine>
     				    <properties>     
     				        <property>
                                <name>usedefaultlisteners</name>
                                <value>false</value>
                            </property>               		
                    		<property>
                        		<name>listener</name>
                        		<value>ru.letoapp.utilities.BaseHTMLReporter</value>
                    		</property>
                		</properties>       				    
       		  		    <!-- <suiteXmlFiles>
           					<suiteXmlFile>contracts_screens_testsuite.xml</suiteXmlFile>
         				</suiteXmlFiles> -->  
          				<suiteXmlFiles> 
           					<suiteXmlFile>testng.xml</suiteXmlFile>
         				</suiteXmlFiles>                     	     				
			       </configuration>    				
     			</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-eclipse-plugin</artifactId>
					<version>2.9</version>
					<configuration>
					    <encoding>UTF-8</encoding>
						<useProjectReferences>true</useProjectReferences>
					</configuration>
				</plugin>			
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>2.7</version>
					<configuration>
					    <encoding>UTF-8</encoding>						
					</configuration>
				</plugin>	
			</plugins>
		</pluginManagement>
		
  </build>
  <dependencies>
  	<dependency>
  		<groupId>ru.letoapp</groupId>
  		<artifactId>app-manager</artifactId>
  		<version>0.0.1-SNAPSHOT</version>
  	</dependency>
  	<dependency>
    	<groupId>com.google.inject</groupId>
    	<artifactId>guice</artifactId>
    	<version>4.0</version>    	
	</dependency>
  	<dependency>
		<groupId>org.testng</groupId>
		<artifactId>testng</artifactId>
		<version>6.9.6</version>					
	</dependency>
	<dependency>
    	<groupId>log4j</groupId>
    	<artifactId>log4j</artifactId>
    	<version>1.2.17</version>
	</dependency>
	 <dependency>
		<groupId>org.apache.velocity</groupId>
		<artifactId>velocity</artifactId>
		<version>1.7</version>
	</dependency>
	<dependency>
        <groupId>org.uncommons</groupId>
        <artifactId>reportng</artifactId>
        <version>1.1.4</version>     
        <exclusions>
            <exclusion>
                <groupId>org.testng</groupId>
                <artifactId>testng</artifactId>
            </exclusion>
            <exclusion>
				<groupId>org.apache.velocity</groupId>
				<artifactId>velocity</artifactId>
			</exclusion>
        </exclusions>   
    </dependency>
<!-- 	<dependency>
		<groupId>com.google.android</groupId>
		<artifactId>android</artifactId>
		<version>4.1.1.4</version>
	</dependency>
	<dependency>
		<groupId>org.apache.httpcomponents</groupId>
		<artifactId>httpclient</artifactId>
		<version>4.5</version>
	</dependency>  -->
	<dependency>
    	<groupId>org.apache.poi</groupId>
    	<artifactId>poi-ooxml</artifactId>
    	<version>3.9</version>
	</dependency>
  </dependencies>
</project>